Update css - fix menu on mobile

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: left;
     position: relative;
-    height: 100svh;
+    min-height: 100svh;
 }
 
 .about-profile{
